Remove fake token

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Bot Token
-DISCORD_TOKEN=MTIwNzc2MzczMDA5MjI2MTM4Ng.GyrA5X.0VabOEh7na_DjLbwH9fsx8Ebx9OOvtRbJQbrQQ
+DISCORD_TOKEN=
 # Bot Application ID
 CLIENT_ID=1207763730092261386
 # Server ID
