--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "fs": "^0.0.1-security",
     "snoowrap": "^1.23.0",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
