Replace old reddit feed system;

--- a/src/config.json
+++ b/src/config.json
@@ -1,17 +1,14 @@
 {
-    "handles" : {
-        "inputSuffix" : "-feed",
-        "outputSuffix" : "-discussion"
-    },
-    "channels" : {
-        "introductions" : "introductions"
-    },
-    "roles" : {
-        "introduced" : "1208561221989834842",
-        "unintroduced" : "1208562221794328708"
-    },
-    "reddit": {
-        "subreddit" : "christiandating",
-        "excludedFlair": "introduction"
-    }
+  "channels": {
+    "introductions": "1206684421651038298",
+    "redditDiscussion": "1207787760539410432"
+  },
+  "roles": {
+    "introduced": "1208561221989834842",
+    "unintroduced": "1208562221794328708"
+  },
+  "reddit": {
+    "subreddit": "christiandating",
+    "excludedFlair": "introduction"
+  }
 }
