--- a/src/config.json
+++ b/src/config.json
@@ -8,7 +8,7 @@
     "unintroduced": "1208562221794328708"
   },
   "reddit": {
-    "subreddit": "christiandating",
+    "subreddit": "random_poll_guy",
     "excludedFlair": "introduction",
     "url": "https://www.reddit.com/r/ChristianDating/",
     "permaLinks": {
