--- a/src/config.json
+++ b/src/config.json
@@ -1,11 +1,11 @@
 {
   "channels": {
-    "introductions": "1206684421651038298",
-    "redditDiscussion": "1207787760539410432"
+    "introductions": "introductions",
+    "redditDiscussion": "reddit-discussion"
   },
   "roles": {
-    "introduced": "1208561221989834842",
-    "unintroduced": "1208562221794328708"
+    "introduced": "introduced",
+    "unintroduced": "unintroduced"
   },
   "reddit": {
     "subreddit": "christiandating",
@@ -13,12 +13,6 @@
     "url": "https://www.reddit.com/r/ChristianDating/",
     "permaLinks": {
       "introductions": "search/?q=flair%3AIntroduction&t=month"
-    },
-    "flair": {
-      "meta": "eea11990-555d-11ee-9a56-8e610c3ed60a",
-      "introduction": "cf32e8b8-0066-11ea-9201-0e6213c04582",
-      "needAdvice": "e0c50e6c-0066-11ea-b771-0e515ff82629",
-      "discussion": "5ba63174-7b66-11ed-afdf-ae95439eb3ec"
     }
   }
 }
