Add discussion flair filter

--- a/src/config.json
+++ b/src/config.json
@@ -12,6 +12,11 @@
     "url": "https://www.reddit.com/r/ChristianDating/",
     "permaLinks": {
       "introductions": "search/?q=flair%3AIntroduction&t=month"
+    },
+    "flair": {
+      "discussion": {
+        "text": "discussion"
+      }
     }
   }
 }
